[package]
name = "fo_meta_server"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"
publish = false

[features]
default = ["tls-rust"]
live_reload = []
#map_viewer = ["fo_data", "fo_map_format", "fo_proto_format", "nom_prelude", "draw_geometry"]
tls-rust = ["actix-web/rustls", "reqwest/rustls-tls", "mrhandy/tls-rust"]
#tls-native = ["actix-tls/nativetls", "reqwest/native-tls", "mrhandy/tls-native"]

[dependencies]
# sub-crates
fo_clients_db = { path = "crates/clients_db" }
fo_meta_protocol = { path = "crates/protocol" }
mrhandy = { path = "crates/mrhandy", default-features = false }

primitives = { git = "https://github.com/fonline-rust/legacy.git" }
fo_defines = { git = "https://github.com/fonline-rust/legacy.git", features = ["serde1"] }
fo_defines_fo4rp = { git = "https://github.com/fonline-rust/legacy.git" }

#fo_data = { path = "../../crates/fo_data", optional = true }
#fo_map_format = { path = "../../crates/fo_map_format", optional = true }
#draw_geometry = { path = "../../crates/geometry_view", optional = true }
#fo_proto_format = { git = "https://github.com/fonline-roleplay/fo_proto_format.git", optional = true }
#fo_save_format = { git = "https://github.com/fonline-roleplay/fo_save_format.git" }
#nom_prelude = { path = "../format_extras/nom_prelude", optional = true }

# actix
actix-web = "4"
rustls = "0.20"
rustls-pemfile = "1"
actix-server = "2.1"
actix-service = "2"
actix-codec = "0.5"
actix-files = "0.6"
actix-rt = "2.7.0"
actix-session = {version = "0.6", features = ["cookie-session"] }
actix-http = "3"
#actix-form-data = "0.4.0"
#actix-multipart = "0.1.2"

# futures & tokio
futures = "0.3"
tokio = "1"

# parsing, encoding & decoding
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
tera = "1.0"
rsass = "0.25"
v_htmlescape = "0.14"
percent-encoding = "2.1"
#encoding_rs = "0.8"
bincode = "1.2"
base64 = "0.13"
image = { version = "0.24", default-features = false, features = ["png"] }
#url = "1.7.2"

# other
arc-swap = "1"
arrayvec = "0.7"
bytes = "1"
custom_error = "1.9"
#itertools = "0.8"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
sled = "0.34.0"
oauth2 = { version = "4.2" }
http1 = { version = "0.2", package = "http" }
reqwest = { version = "0.11", default-features = false }

#ring = "= 0.16.9"
#libc = "= 0.2.66"
#tokio-rustls = "= 0.12.1"

[workspace]
members = [
    "bin/meta_basic", #"bin/meta_map_viewer"
]

[profile.release]
lto = "fat"
debug = false
codegen-units = 1

[profile.dev]
lto = false
#opt-level = 1
debug = 0
