[package]
name = "mrhandy"
version = "0.1.0"
authors = ["qthree <qthree3@gmail.com>"]
edition = "2018"

[features]
default = ["tls-rust"]
tls-rust = ["serenity/default"]
tls-native = ["serenity/default_native_tls"]

[dependencies]
serenity.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
futures.workspace = true
tokio.workspace = true
let_clone.workspace = true
